# policy-gate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  RED_TEAM.md  SA-078-MULTILINGUAL-INTENT-PATTERNS.md  SAFETY_MANUAL.md  SECURITY_AUDIT_REPORT.md  audit_chain.seal  deployment.md  firewall.broken.toml  firewall.example.toml  firewall.toml  index.ts  operator_actions.jsonl  simulate_audit.py  tsconfig.json  verify_probing_sequences.py
.github/workflows/: safety-verification.yml  security.yml
.kiro/steering/: product.md  structure.md  tech.md
crates/firewall-cli/: Cargo.toml
crates/firewall-cli/src/: diff.rs  main.rs
crates/firewall-core/: BENCHMARKS.md  Cargo.toml  audit_chain.seal  audit_hmac_key.seal  firewall.toml  test_output.txt
crates/firewall-core/benches/: channel_a.rs  channel_b.rs  integration.rs  throughput.rs  voter.rs
crates/firewall-core/examples/: quick_throughput.rs
crates/firewall-core/src/: advisory.rs  audit.rs  config.rs  config_watcher.rs  egress.rs  egress_structured.rs  ingress.rs  init.rs  lib.rs  orchestrator.rs  review.rs  semantic.rs  semantic_generated.rs  semantic_generated.rs.tmp  session.rs  stream_scanner.rs  structured.rs  types.rs  verdict_build.rs
crates/firewall-core/src/fsm/: egress.rs  intent_patterns.rs  mod.rs
crates/firewall-core/src/rule_engine/: egress.rs  mod.rs  rules.rs
crates/firewall-core/tests/: anchor_tests.rs  conformance_corpus.rs  divergence_stats.rs  hot_reload_and_egress_tests.rs  integration_tests.rs  investigation_tests.rs  multi_tenant_tests.rs  multilingual_intent_tests.rs  red_team_tests.rs  semantic_tests.rs  session_aware_e2e.rs  session_tests.rs  structured_input_tests.rs  toml_verification.rs
crates/firewall-fuzz/fuzz_targets/: fuzz_channel_a.rs
crates/firewall-napi/: Cargo.toml
crates/firewall-napi/src/: lib.rs
crates/firewall-proxy/: Cargo.toml  audit_chain.seal  audit_hmac_key.seal
crates/firewall-proxy-wasm/: Cargo.toml
crates/firewall-proxy-wasm/src/: lib.rs
crates/firewall-proxy/src/: main.rs  streaming.rs
crates/firewall-pyo3/: Cargo.toml
crates/firewall-pyo3/src/: lib.rs
crates/firewall-wasm/src/: lib.rs
docs/: COMPETITIVE_ANALYSIS.md  ENTERPRISE_ROADMAP.md  agents.md  multi-tenant.md  performance.md  proxy.md  revision_history.md  verification.md
examples/: firewall.langgraph.example.toml  langgraph_firewall_integration.py
examples/envoy/: envoy-demo.yaml
helm/policy-gate/: Chart.yaml  values.yaml
helm/policy-gate/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
policy-hub/: README.md
scripts/: generate_centroids.py  requirements-centroids.txt  setup_bert.py  test_proxy.py
tmp/: bootstrap_centroids.rs
verification/: actions_dashboard.py  benchmark_datasets.py  conformance_corpus.json  create_test_log.py  fuzz_regex.py  operator_review.py  operator_review_architecture.md  semantic_corpus.json  suggest_pattern.py  test_log.jsonb  test_text.db
