[package]
name = "firewall-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "firewall-cli"
path = "src/main.rs"

[dependencies]
firewall-core = { path = "../firewall-core", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
