[package]
name = "firewall-proxy-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
firewall-core = { path = "../firewall-core", default-features = false }
proxy-wasm = "0.2.2"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
