[package]
name = "firewall-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
firewall-core = { path = "../firewall-core" }
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
# Use native-tls backend to avoid aws-lc-sys C compiler requirement on Windows
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
serde = { workspace = true }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Observability: Prometheus metrics (Step 3 of Enterprise Roadmap)
# Using push-mode metrics recording; we expose /metrics via our own axum route
# to avoid pulling in rustls from metrics-exporter-prometheus's HTTP listener.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
