[package]
name = "firewall-proxy"
version = "0.1.0"
edition = "2021"

[features]
# Pillar 6: Streaming Egress — compile with this feature to enable safe SSE filtering.
# When disabled (default), stream:true requests are rejected with HTTP 400.
streaming-egress = ["firewall-core/streaming-egress"]

[dependencies]
firewall-core = { path = "../firewall-core" }
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
# Use native-tls backend to avoid aws-lc-sys C compiler requirement on Windows
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"], default-features = false }
serde = { workspace = true }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Observability: Prometheus metrics (Step 3 of Enterprise Roadmap)
# Using push-mode metrics recording; we expose /metrics via our own axum route
# to avoid pulling in rustls from metrics-exporter-prometheus's HTTP listener.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
# Pillar 6: Streaming body iteration
futures-util = "0.3"

[dev-dependencies]
portpicker = "0.1.1"
